Added authentication func
