# actions/auth.go
@@ -5,12 +5,16 @@ import (
 	"strings"
 
 	"mnm_sim/models"
-
+	"fmt"
+	"time"
+	"strconv"
 	"github.com/gobuffalo/buffalo"
 	"github.com/gobuffalo/pop"
 	"github.com/gobuffalo/validate"
 	"github.com/pkg/errors"
 	"golang.org/x/crypto/bcrypt"
+	"crypto/rand"
+	"encoding/base64"
 )
 
 // AuthNew loads the signin page
@@ -19,6 +23,19 @@ func AuthNew(c buffalo.Context) error {
 	return c.Render(200, r.HTML("auth/new.html"))
 }
 
+// UsersCreate registers a new user with the application.
+// AuthenticateUser godoc
+// @Summary Add a User
+// @Description add by json User
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param User body models.AuthenticateUser true "Add User"
+// @Success 200 {object} models.User
+// @Failure 400 {object} web.HTTPError
+// @Failure 404 {object} web.HTTPError
+// @Failure 500 {object} web.HTTPError
+// @Router /signin [post]
 // AuthCreate attempts to log the user in with an existing account.
 func AuthCreate(c buffalo.Context) error {
 	u := &models.User{}
@@ -30,19 +47,20 @@ func AuthCreate(c buffalo.Context) error {
 
 	// find a user with the email
 	err := tx.Where("email = ?", strings.ToLower(strings.TrimSpace(u.Email))).First(u)
-
+	fmt.Printf("I am in\n")
 	// helper function to handle bad attempts
 	bad := func() error {
 		c.Set("user", u)
 		verrs := validate.NewErrors()
 		verrs.Add("email", "invalid email/password")
 		c.Set("errors", verrs)
-		return c.Render(422, r.HTML("auth/new.html"))
+		return c.Render(422, r.Auto(c, u))
 	}
 
 	if err != nil {
 		if errors.Cause(err) == sql.ErrNoRows {
 			// couldn't find an user with the supplied email address.
+			fmt.Printf("In-correct email.\n")
 			return bad()
 		}
 		return errors.WithStack(err)
@@ -51,17 +69,21 @@ func AuthCreate(c buffalo.Context) error {
 	// confirm that the given password matches the hashed password from the db
 	err = bcrypt.CompareHashAndPassword([]byte(u.PasswordHash), []byte(u.Password))
 	if err != nil {
+		fmt.Printf("Password mismatch.\n")
 		return bad()
 	}
-	c.Session().Set("current_user_id", u.ID)
+	client, token, expiry, e := generate_tokens(32, 30)
+	if e != nil {
+		return bad()
+	}
+	c.Response().Header().Set("uid", u.Email)
+	c.Response().Header().Set("client", client)
+	c.Response().Header().Set("token", token)
+	c.Response().Header().Set("expiry", expiry)
+
 	c.Flash().Add("success", "Welcome Back to Buffalo!")
 
-	redirectURL := "/"
-	if redir, ok := c.Session().Get("redirectURL").(string); ok {
-		redirectURL = redir
-	}
-
-	return c.Redirect(302, redirectURL)
+	return c.Render(201, r.Auto(c, u))
 }
 
 // AuthDestroy clears the session and logs a user out
@@ -69,4 +91,42 @@ func AuthDestroy(c buffalo.Context) error {
 	c.Session().Clear()
 	c.Flash().Add("success", "You have been logged out!")
 	return c.Redirect(302, "/")
+}
+
+// GenerateRandomBytes returns securely generated random bytes. 
+// It will return an error if the system's secure random
+// number generator fails to function correctly, in which
+// case the caller should not continue.
+func GenerateRandomBytes(n int) ([]byte, error) {
+	b := make([]byte, n)
+	_, err := rand.Read(b)
+    // Note that err == nil only if we read len(b) bytes.
+	if err != nil {
+		return nil, err
+	}
+
+	return b, nil
+}
+
+// GenerateRandomString returns a URL-safe, base64 encoded
+// securely generated random string.
+// It will return an error if the system's secure random
+// number generator fails to function correctly, in which
+// case the caller should not continue.
+func GenerateRandomString(s int) (string, error) {
+	b, err := GenerateRandomBytes(s)
+	return base64.URLEncoding.EncodeToString(b), err
+}
+
+func generate_tokens(token_size int, expiry_time int) (string, string, string, error) {
+	client, err := GenerateRandomString(token_size)
+	token, err1 := GenerateRandomString(token_size)
+	expiry := strconv.FormatInt((time.Now().AddDate(0,0, expiry_time).UnixNano() / 1000000), 10)
+	if err != nil {
+		return "", "", "", err
+	}
+	if err1 != nil {
+		return "", "", "", err1
+	}
+	return client, token, expiry, nil
 }
