# actions/users.go
@@ -8,15 +8,35 @@ import (
 	"github.com/pkg/errors"
 )
 
+// Create new user godoc
+// @Summary Create user
+// @Description Create user form
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} web.SuccessObj
+// @Router /users/new [get]
 func UsersNew(c buffalo.Context) error {
 	u := models.User{}
 	c.Set("user", u)
-	return c.Render(200, r.HTML("users/new.html"))
+	return c.Render(200, r.JSON(map[string]string{"message": "Welcome to Buffalo!"}))
 }
 
 // UsersCreate registers a new user with the application.
+// AddUser godoc
+// @Summary Add a User
+// @Description add by json User
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param User body models.AddUser true "Add User"
+// @Success 200 {object} models.User
+// @Failure 400 {object} web.HTTPError
+// @Failure 404 {object} web.HTTPError
+// @Failure 500 {object} web.HTTPError
+// @Router /users [post]
 func UsersCreate(c buffalo.Context) error {
 	u := &models.User{}
+	
 	if err := c.Bind(u); err != nil {
 		return errors.WithStack(err)
 	}
@@ -30,13 +50,13 @@ func UsersCreate(c buffalo.Context) error {
 	if verrs.HasAny() {
 		c.Set("user", u)
 		c.Set("errors", verrs)
-		return c.Render(200, r.HTML("users/new.html"))
+		return c.Render(200,  r.Auto(c, verrs))
 	}
 
-	c.Session().Set("current_user_id", u.ID)
+	c.Response().Header().Set("uid", u.Email)
 	c.Flash().Add("success", "Welcome to Buffalo!")
 
-	return c.Redirect(302, "/")
+	return c.Render(201, r.Auto(c, u))
 }
 
 // SetCurrentUser attempts to find a user based on the current_user_id
