# models/phase.go
@@ -1,0 +1,64 @@
+package models
+
+import (
+	"encoding/json"
+	"github.com/gobuffalo/pop"
+	"github.com/gobuffalo/validate"
+	"github.com/gobuffalo/validate/validators"
+	"github.com/gofrs/uuid"
+	"time"
+)
+
+type Phase struct {
+	ID        uuid.UUID `json:"id" db:"id"`
+	CreatedAt time.Time `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+	Name      string    `json:"name" db:"name"`
+	Bio       string    `json:"bio" db:"bio"`
+}
+
+// String is not required by pop and may be deleted
+func (p Phase) String() string {
+	jp, _ := json.Marshal(p)
+	return string(jp)
+}
+
+// Phases is not required by pop and may be deleted
+type Phases []Phase
+
+// String is not required by pop and may be deleted
+func (p Phases) String() string {
+	jp, _ := json.Marshal(p)
+	return string(jp)
+}
+
+// Validate gets run every time you call a "pop.Validate*" (pop.ValidateAndSave, pop.ValidateAndCreate, pop.ValidateAndUpdate) method.
+// This method is not required and may be deleted.
+func (p *Phase) Validate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.Validate(
+		&validators.StringIsPresent{Field: p.Name, Name: "Name"},
+		&validators.StringIsPresent{Field: p.Bio, Name: "Bio"},
+	), nil
+}
+
+// ValidateCreate gets run every time you call "pop.ValidateAndCreate" method.
+// This method is not required and may be deleted.
+func (p *Phase) ValidateCreate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.NewErrors(), nil
+}
+
+// ValidateUpdate gets run every time you call "pop.ValidateAndUpdate" method.
+// This method is not required and may be deleted.
+func (p *Phase) ValidateUpdate(tx *pop.Connection) (*validate.Errors, error) {
+	return validate.NewErrors(), nil
+}
+
+// AddPhase example
+type AddPhase struct {
+	Name string `json:"name" example:"Phase name"`
+}
+
+// UpdatePhase example
+type UpdatePhase struct {
+	Name string `json:"name" example:"Phase name"`
+}
